[package]
name = "cserun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["cargo"] }
dirs = "5.0.1"
rpassword = "7.3.1"
serde = { version = "1.0.196", features = ["derive"] }
ssh2 = "0.9.4"
toml = "0.8.10"
