[package]
name = "cserun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive"] }
dirs = "5.0.1"
ignore = "0.4.22"
rpassword = "7.3.1"
serde = { version = "1.0.196", features = ["derive"] }
ssh2 = "0.9.4"
toml = "0.8.10"
