[package]
name = "cserun"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["unsw", "cse", "cselab", "cserun"]
categories = ["command-line-utilities"]
repository = "https://github.com/xxxbrian/cserun"
description = "A tool to run your lab/assignments on the CSE machines from your local machine."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive"] }
console = "0.15.8"
dirs = "5.0.1"
ignore = "0.4.22"
indicatif = "0.17.8"
rpassword = "7.3.1"
serde = { version = "1.0.196", features = ["derive"] }
ssh2 = "0.9.4"
toml = "0.8.10"
